--- a/css/3d.css
+++ b/css/3d.css
@@ -2,6 +2,6 @@
     margin-top: 20px;
     background-color: #1e1e1e79;
     height: 300px;
-    width: 327px;
+    width: 100%;
     border-radius: 10px;
 }
