--- a/css/3d.css
+++ b/css/3d.css
@@ -5,3 +5,16 @@
     width: 100%;
     border-radius: 10px;
 }
+
+#alert-box {
+	background-color: #050915;
+	color: #777;
+	padding: 5px;
+	text-align:center;
+	font-family:Arial, Helvetica, sans-serif;
+}
+
+#alert-box p{
+    margin: auto;
+    font-size: 15px;
+}
