--- a/projects/open.css
+++ b/projects/open.css
@@ -52,16 +52,7 @@ body {
     object-fit: contain;
 }
 
-model-viewer { margin: auto; height: 300px;}
-
-.viewer {
-    background-color: #1e1e1e79;
-    max-height: 300px;
-    width: 100%;
-    border-radius: 10px;
-}
-
-model-viewer { margin: auto; height: 300px;}
+model-viewer { margin: auto; height: 300px; width: 100%;}
 
 .viewer {
     background-color: #1e1e1e79;
