Jenkins Working  Nicely

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const metadata = {
     <Fragment slot="subtitle">
       Finnish technology student at Business College Helsinki, with a background at WithSecure, a leading Nordic
       cybersecurity company. Skilled in networking, server environments, cybersecurity, web development, and data
-      analysis. Actively seeking opportunities in IT from all over the world to contribute in enhancing system security. ______
+      analysis. Actively seeking opportunities in IT from all over the world to contribute in enhancing system security.
     </Fragment>
   </Hero>
 
