--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -16,7 +16,7 @@ const metadata = {
     subtitle='Contact me using <a class="underline" href="mailto:Rene@Karkkainen.net">E-Mail by clicking here</a> or <a class="underline" href="https://teams.microsoft.com/l/chat/0/0?users=Rene@Karkkainen.net">Microsoft Teams by clicking here</a>.<br>The address below works for both E-Mail and Microsoft Teams.<br>'
     email='Rene@Karkkainen.net'
     fingerprint='EB36 C299 3D96 576B B332 07B0 8145 F35C 5B38 6A41'
-    key='-----BEGIN PGP PUBLIC KEY BLOCK-----
+    key="-----BEGIN PGP PUBLIC KEY BLOCK-----
     Comment: User-ID:	Rene Karkkainen <Rene@Karkkainen.net>
     Comment: Valid from:	07/04/2024 1.09
     Comment: Valid until:	07/04/2030 12.00
@@ -74,6 +74,6 @@ const metadata = {
     aqvXMlPFq04MyUg+TjjZdQId1bOUFJgScmctT/ydtMqm8C3d+ODjnxMl7ed497Ul
     +rkRz84hOid8rd7kVU8Yuw==
     =5Tps
-    -----END PGP PUBLIC KEY BLOCK-----'
+    -----END PGP PUBLIC KEY BLOCK-----"
   />  
 </Layout>
