--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -35,7 +35,7 @@ const {
 Comment: User-ID:	Rene Karkkainen <Rene@Karkkainen.net>
 Comment: Valid from:	07/04/2024 1.09
 Comment: Valid until:	07/04/2030 12.00
-Comment: Type:	4 096-bit RSA (secret key available)
+Comment: Type:	4 096-bit RSA
 Comment: Usage:	Signing, Encryption, Certifying User-IDs
 Comment: Fingerprint:	EB36C2993D96576BB33207B08145F35C5B386A41
 
