--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -202,7 +202,7 @@ const metadata = {
       },
     ]}
     image={{
-      src: '~/assets/images/server1.png',
+      src: '~/assets/images/servers.jpg',
       alt: 'Image of my rack server',
     }}
   >
