--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -218,7 +218,7 @@ const metadata = {
       {
         icon: "tabler:app-window",
         description:
-          "I have experimented with a variety of software tools including Jenkins, Puppet, Git, pfSense, Suricata, OpenVPN, unbound, Nextcloud, NGINX and Apache.",
+          "Experimented with a variety of software tools including Jenkins, Puppet, Git, pfSense, Suricata, OpenVPN, unbound, Nextcloud, NGINX and Apache.",
       },
     ]}
     image={{
