Added socials to contact page

--- a/src/components/widgets/Content.astro
+++ b/src/components/widgets/Content.astro
@@ -40,9 +40,10 @@ const {
       subtitle: 'max-w-3xl mx-auto sm:text-center text-xl text-muted dark:text-slate-400',
     }}
   />
+  
   <div class="mx-auto max-w-7xl p-4 md:px-8">
-    <div class={`md:flex ${isReversed ? 'md:flex-row-reverse' : ''} md:gap-16`}>
-      <div class="md:basis-1/2 self-center">
+    <div class={`md:flex ${classes?.callToAction} ${isReversed ? 'md:flex-row-reverse' : ''} md:gap-16`}>
+      <div class="mx-auto md:basis-1/2 self-center">
         {content && <div class="mb-12 text-lg dark:text-slate-400" set:html={content} />}
 
         {
@@ -67,9 +68,10 @@ const {
           }}
         />
       </div>
-      <div aria-hidden="true" class="mt-10 md:mt-0 md:basis-1/2">
+      
         {
           image && (
+          <div aria-hidden="true" class="mt-10 md:mt-0 md:basis-1/2">
             <div class="relative m-auto max-w-4xl">
               {typeof image === 'string' ? (
                 <Fragment set:html={image} />
@@ -85,9 +87,10 @@ const {
                 />
               )}
             </div>
+          </div>
           )
         }
-      </div>
+      
     </div>
   </div>
 </WidgetWrapper>
