--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,6 +2,7 @@
 import Layout from '~/layouts/PageLayout.astro';
 import ContactUs from '~/components/widgets/Contact.astro';
 import fs from 'node:fs';
+import Content from '~/components/widgets/Content.astro';
 
 const metadata = {
   title: 'Contact',
@@ -14,9 +15,55 @@ const key = fs.readFileSync('./public/pgp.txt', 'utf8');
     tagline="Contact"
     title="Drop me a message today!"
     subtitle='Contact me using <a class="underline" href="mailto:Rene@Karkkainen.net">E-Mail by clicking here</a> or <a class="underline" href="https://teams.microsoft.com/l/chat/0/0?users=Rene@Karkkainen.net">Microsoft Teams by clicking here</a>.<br>The address below works for both E-Mail and Microsoft Teams.<br> '
-    email='Rene@Karkkainen.net'
-    fingerprint='EB36 C299 3D96 576B B332 07B0 8145 F35C 5B38 6A41'
+    email="Rene@Karkkainen.net"
+    fingerprint="EB36 C299 3D96 576B B332 07B0 8145 F35C 5B38 6A41"
     key={key}
     keyHeight="200px"
-  />  
+  />
+
+  <Content
+    id="about"
+    columns={4}
+    classes={{ container: "md:-mt-32", callToAction: "flex" }}
+    items={[
+      {
+        icon: 'tabler:at',
+        callToAction: {
+          text: 'E-Mail',
+          href: 'mailto:Rene@Karkkainen.net',
+        },
+      },
+      {
+        icon: 'tabler:brand-teams',
+        callToAction: {
+          text: 'Teams',
+          href: 'https://teams.microsoft.com/l/chat/0/0?users=Rene@Karkkainen.net',
+        },
+      },
+      {
+        icon: 'tabler:brand-linkedin',
+        callToAction: {
+          target: '_blank',
+          text: 'LinkedIn',
+          href: 'r/linkedin.html',
+        },
+      },
+      {
+        icon: 'tabler:brand-x',
+        callToAction: {
+          target: '_blank',
+          text: 'X.COM',
+          href: 'r/x.html',
+        },
+      },
+      {
+        icon: 'tabler:brand-github',
+        callToAction: {
+          target: '_blank',
+          text: 'GitHub',
+          href: 'r/github.html',
+        },
+      },
+    ]}
+  />
 </Layout>
