Made the contact page look a bit better

--- a/src/components/ui/ItemGrid.astro
+++ b/src/components/ui/ItemGrid.astro
@@ -22,11 +22,11 @@ const {
       class={twMerge(
         `grid mx-auto gap-8 md:gap-y-12 ${
           columns === 4
-            ? 'lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-2'
+            ? 'lg:grid-cols-4 md:grid-cols-3 grid-cols-2'
             : columns === 3
-            ? 'lg:grid-cols-3 sm:grid-cols-2'
+            ? 'lg:grid-cols-3 grid-cols-2'
             : columns === 2
-            ? 'sm:grid-cols-2 '
+            ? 'grid-cols-2 '
             : columns === 0
             ? 'grid-cols-2'
             : ''
