--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,7 +2,6 @@
 import Layout from '~/layouts/PageLayout.astro';
 import ContactUs from '~/components/widgets/Contact.astro';
 import fs from 'node:fs';
-import Content from '~/components/widgets/Content.astro';
 
 const metadata = {
   title: 'Contact',
@@ -13,57 +12,11 @@ const key = fs.readFileSync('./public/pgp.txt', 'utf8');
 <Layout metadata={metadata}>
   <ContactUs
     tagline="Contact"
-    title="Drop me a message today!"
-    subtitle='Contact me using <a class="underline" href="mailto:Rene@Karkkainen.net">E-Mail by clicking here</a> or <a class="underline" href="https://teams.microsoft.com/l/chat/0/0?users=Rene@Karkkainen.net">Microsoft Teams by clicking here</a>.<br>The address below works for both E-Mail and Microsoft Teams.<br> '
-    email="Rene@Karkkainen.net"
-    fingerprint="EB36 C299 3D96 576B B332 07B0 8145 F35C 5B38 6A41"
+    title='Drop me a <span class="text-accent dark:text-white highlight">message</span> today!'
+    subtitle='Click the icons below to contact me via your preferred method.<br>The address below works for both E-Mail and Microsoft Teams.<br> '
+    email='RENE@KARKKAINEN<span class="text-secondary dark:text-white highlight">.NET</span>'
+    fingerprint=""
     key={key}
     keyHeight="200px"
-  />
-
-  <Content
-    id="about"
-    columns={4}
-    classes={{ container: "md:-mt-32", callToAction: "flex" }}
-    items={[
-      {
-        icon: 'tabler:at',
-        callToAction: {
-          text: 'E-Mail',
-          href: 'mailto:Rene@Karkkainen.net',
-        },
-      },
-      {
-        icon: 'tabler:brand-teams',
-        callToAction: {
-          text: 'Teams',
-          href: 'https://teams.microsoft.com/l/chat/0/0?users=Rene@Karkkainen.net',
-        },
-      },
-      {
-        icon: 'tabler:brand-linkedin',
-        callToAction: {
-          target: '_blank',
-          text: 'LinkedIn',
-          href: 'r/linkedin.html',
-        },
-      },
-      {
-        icon: 'tabler:brand-x',
-        callToAction: {
-          target: '_blank',
-          text: 'X.COM',
-          href: 'r/x.html',
-        },
-      },
-      {
-        icon: 'tabler:brand-github',
-        callToAction: {
-          target: '_blank',
-          text: 'GitHub',
-          href: 'r/github.html',
-        },
-      },
-    ]}
   />
 </Layout>
