--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -65,7 +65,7 @@ const {
     (
       <>
         <div class="flex flex-col max-w-3xl mx-auto rounded-lg backdrop-blur border border-gray-200 dark:border-gray-700 bg-white dark:bg-slate-900 shadow p-4 sm:p-6 lg:p-8">
-          { email && <a href={twMerge("mailto:", email)} class="text-center text-2xl" set:html={email}></a>}
+          { email && <div class="flex justify-center"><a href={twMerge("mailto:", email)} class="w-fit text-2xl" set:html={email}></a></div>}
           { key && 
             <p class="text-center pt-5 pb-4 text-muted">{fingerprint}</p>          
             <div class="relative">
