--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -14,8 +14,7 @@ const key = fs.readFileSync('./public/pgp.txt', 'utf8');
     tagline="Contact"
     title='Drop me a <span class="text-accent dark:text-white highlight">message</span> today!'
     subtitle='Click the icons below to contact me via your preferred method.<br>The address below works for both E-Mail and Microsoft Teams.<br> '
-    email='RENE@KARKKAINEN<span class="text-secondary dark:text-white highlight">.NET</span>'
-    fingerprint=""
+    email='RENE@KARKKAINEN.NET'
     key={key}
     keyHeight="200px"
   />
