--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -40,7 +40,7 @@ const {
         callToAction: {
           target: '_blank',
           text: 'Teams',
-          href: 'r/teams.html',
+          href: '../r/teams.html',
         },
       },
       {
@@ -48,7 +48,7 @@ const {
         callToAction: {
           target: '_blank',
           text: 'LinkedIn',
-          href: 'r/linkedin.html',
+          href: '../r/linkedin.html',
         },
       },
       {
@@ -56,7 +56,7 @@ const {
         callToAction: {
           target: '_blank',
           text: 'GitHub',
-          href: 'r/github.html',
+          href: '../r/github.html',
         },
       },
     ]}
