--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -108,21 +108,27 @@ const metadata = {
     items={[
       {
         title:
+          'IT Manager | Internship<br> <span class="font-normal">Nordiska Partners Limited, Causeway Bay, Hong Kong SAR</span> <br/><span class="text-sm font-normal">Jun - Jul 2024</span>',
+        description: `I’m responsible for overseeing IT infrastructure, network, and server maintenance. I also focus on implementing information security measures and providing technical support to our team. Managing vendor relations, developing IT strategy, and handling budget and policy development are key parts of my job. I lead various IT projects, ensuring they align seamlessly with company goals.`,
+        icon: "tabler:chart-area-line",
+      },
+      {
+        title:
           'Information Technology Trainee | Internship<br> <span class="font-normal">WithSecure Oyj, Helsinki, Finland</span> <br/><span class="text-sm font-normal">Oct - Dec 2023</span>',
         description: `Maintained computer systems and hardware, analyzed customer data to ensure accuracy and integrity, troubleshooted internal IT issues, and wrote documentation for hardware installation procedures.`,
-        icon: "tabler:briefcase",
+        icon: "tabler:analyze",
       },
       {
         title:
           'Nursing Home Assistant | Summer Job<br> <span class="font-normal">City of Helsinki, Helsinki, Finland</span> <br /> <span class="text-sm font-normal">Jun - Jul 2022</span>',
         description: `Brightened residents' days with walks, reading time, and fun outings like disco nights, bingo games, and trips to parks.`,
-        icon: "tabler:briefcase",
+        icon: "tabler:stethoscope",
       },
       {
         title:
           'Store Assistant | Internship<br> <span class="font-normal">K-Market Rekola, Vantaa, Finland</span> <br /> <span class="text-sm font-normal">Dec 2021</span>',
-        description: `Contributed to the efficient operations by managing sales, overseeing shipment logistics, providing customer service, and ensuring the store maintained a clean and organized environment.`,
-        icon: "tabler:briefcase",
+        description: `I oversee IT infrastructure, implement information security measures and provide technical support. I manage vendor relations, develop IT strategy, handle budget and policy development, and lead digital transformation initiatives to enhance operational efficiency and align with company goals.`,
+        icon: "tabler:building-store",
       },
     ]}
     classes={{ container: "max-w-3xl" }}
