--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -127,7 +127,7 @@ const metadata = {
       {
         title:
           'Store Assistant | Internship<br> <span class="font-normal">K-Market Rekola, Vantaa, Finland</span> <br /> <span class="text-sm font-normal">Dec 2021</span>',
-        description: `I oversee IT infrastructure, implement information security measures and provide technical support. I manage vendor relations, develop IT strategy, handle budget and policy development, and lead digital transformation initiatives to enhance operational efficiency and align with company goals.`,
+        description: `Contribute to efficient store operations by assisting with sales, shipment logistics, providing customer service, and ensuring the store maintains a clean and organized environment.`,
         icon: "tabler:building-store",
       },
     ]}
