--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -108,25 +108,25 @@ const metadata = {
     items={[
       {
         title:
-          'IT Manager | Internship<br> <span class="font-normal">Nordiska Partners Limited, Causeway Bay, Hong Kong SAR</span> <br/><span class="text-sm font-normal">Jun - Jul 2024</span>',
+          'IT Manager<br> <span class="font-normal">Nordiska Partners Limited, Causeway Bay, Hong Kong SAR</span> <br/><span class="text-sm font-normal">Jun - Jul 2024 | Internship</span>',
         description: `I’m responsible for overseeing IT infrastructure, network, and server maintenance. I also focus on implementing information security measures and providing technical support to our team. Managing vendor relations, developing IT strategy, and handling budget and policy development are key parts of my job. I lead various IT projects, ensuring they align seamlessly with company goals.`,
         icon: "tabler:chart-area-line",
       },
       {
         title:
-          'Information Technology Trainee | Internship<br> <span class="font-normal">WithSecure Oyj, Helsinki, Finland</span> <br/><span class="text-sm font-normal">Oct - Dec 2023</span>',
+          'Information Technology Trainee<br> <span class="font-normal">WithSecure Oyj, Helsinki, Finland</span> <br/><span class="text-sm font-normal">Oct - Dec 2023 | Internship</span>',
         description: `Maintained computer systems and hardware, analyzed customer data to ensure accuracy and integrity, troubleshooted internal IT issues, and wrote documentation for hardware installation procedures.`,
         icon: "tabler:analyze",
       },
       {
         title:
-          'Nursing Home Assistant | Summer Job<br> <span class="font-normal">City of Helsinki, Helsinki, Finland</span> <br /> <span class="text-sm font-normal">Jun - Jul 2022</span>',
+          'Nursing Home Assistant<br> <span class="font-normal">City of Helsinki, Helsinki, Finland</span> <br /> <span class="text-sm font-normal">Jun - Jul 2022 | Summer Job</span>',
         description: `Brightened residents' days with walks, reading time, and fun outings like disco nights, bingo games, and trips to parks.`,
         icon: "tabler:stethoscope",
       },
       {
         title:
-          'Store Assistant | Internship<br> <span class="font-normal">K-Market Rekola, Vantaa, Finland</span> <br /> <span class="text-sm font-normal">Dec 2021</span>',
+          'Store Assistant<br> <span class="font-normal">K-Market Rekola, Vantaa, Finland</span> <br /> <span class="text-sm font-normal">Dec 2021  | Internship</span>',
         description: `Contribute to efficient store operations by assisting with sales, shipment logistics, providing customer service, and ensuring the store maintains a clean and organized environment.`,
         icon: "tabler:building-store",
       },
