--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,14 +58,6 @@ const metadata = {
         },
       },
       {
-        icon: "tabler:brand-x",
-        callToAction: {
-          target: "_blank",
-          text: "X.COM",
-          href: "r/x.html",
-        },
-      },
-      {
         icon: "tabler:brand-github",
         callToAction: {
           target: "_blank",
@@ -75,7 +67,7 @@ const metadata = {
       },
     ]}
     image={{
-      src: "~/assets/images/victoria-peak-portrait.jpg",
+      src: "~/assets/images/Portrait.jpg",
       alt: "Me posing at Hong Kong High West Viewing Point",
     }}
   >
